Fixed issues with Chromium based browsers. Removed overflow property of main and articles.

--- a/css/generalstyle.css
+++ b/css/generalstyle.css
@@ -8,8 +8,6 @@ body{
     min-height:100vh;
     width: 100%;
     background-color: black;
-    background-size: 100vh;
-    background-repeat: no-repeat;
     color: white;
     font-family: "Orbitron", sans-serif; /* SOURCE: https://fonts.google.com/selection?classification=Display&stroke=Sans+Serif */
     font-style: normal;
@@ -56,14 +54,14 @@ nav ul li a:hover{
 }
 
 #main{
-    /* flex: 1; */
-    min-height:100vh;
+    flex: 1;
+    /* min-height:100vh; */
     width: 95%;
     margin: auto;
     padding: 20px;
     display: grid;
     grid-template-columns: 30% 70%;
-    overflow: hidden;
+    /* overflow: hidden; */
     max-width: 1920px;
 }
 
