--- a/css/otherstyle.css
+++ b/css/otherstyle.css
@@ -11,7 +11,7 @@ article{
     background-color: rgb(7, 10, 19);
     border-radius: 30px;
     display: block;
-    overflow: scroll;
+    overflow: auto;
     box-shadow: 5px 5px 5px black;
 }
 #RaceTable{
